--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 @font-face{font-style:normal;font-family:"微软雅黑";src:local("微软雅黑")}@font-face{font-family:"微软雅黑";src:local("微软雅黑")}@font-face{font-style:normal;font-family:"微软雅黑";src:local("微软雅黑");unicode-range:U+0-FF}@font-face{font-family:"微软雅黑";src:local("微软雅黑");unicode-range:U+0-FF}:not(pre):not(code):not(textarea):not(tt):not(kbd):not(samp):not(var){font-family:"微软雅黑"!important}pre,code,textarea,tt,kbd,samp,var{font-family:"微软雅黑"!important}pre *,code *,textarea *,tt *,kbd *,samp *,var *{font-family:"微软雅黑"!important}
 
 .text-center-sm{text-align: center;}
+.pic-size-half{width:50%;height:50%;}
 .text-YaHei-normal{font-family: "微软雅黑";}
 .text-YaHei-lg{font-family: "微软雅黑";font-size: large;}
 .text-YaHei-lgb{font-family: "微软雅黑";font-size: large;font-weight: bold;}
